crates/ee-tests/src/snapshots/revm_ee_tests__eip8037__eip8037_sstore_multiple_new_slots.snap
---
source: crates/ee-tests/src/eip8037.rs
expression: "&(baseline_result, result)"
---
[
  {
    "Success": {
      "reason": "Stop",
      "gas": {
        "gas_spent": 57318,
        "state_gas_spent": 0,
        "gas_refunded": 0,
        "floor_gas": 12000
      },
      "logs": [],
      "output": {
        "Call": "0x"
      }
    }
  },
  {
    "Success": {
      "reason": "Stop",
      "gas": {
        "gas_spent": 657318,
        "state_gas_spent": 600000,
        "gas_refunded": 0,
        "floor_gas": 12000
      },
      "logs": [],
      "output": {
        "Call": "0x"
      }
    }
  }
]
