crates/ee-tests/src/snapshots/revm_ee_tests__eip8037__eip8037_state_gas_spent_final_in_result.snap
---
source: crates/ee-tests/src/eip8037.rs
expression: "&(baseline_result, result)"
---
[
  {
    "Success": {
      "reason": "Stop",
      "gas": {
        "gas_spent": 26009,
        "state_gas_spent": 0,
        "gas_refunded": 0,
        "floor_gas": 21000
      },
      "logs": [],
      "output": {
        "Call": "0x"
      }
    }
  },
  {
    "Success": {
      "reason": "Stop",
      "gas": {
        "gas_spent": 226009,
        "state_gas_spent": 200000,
        "gas_refunded": 0,
        "floor_gas": 21000
      },
      "logs": [],
      "output": {
        "Call": "0x"
      }
    }
  }
]
